# CircuitPython_QMI8658C

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  README.rst  README.rst.license  pyproject.toml  qmi8658c.py  qmi8658c_simpletest.py  requirements.txt  ruff.toml
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  examples.rst.license  index.rst
examples/: qmi8658c_simpletest.py
