# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Taiki Komoda for JINS Inc.
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-qmi8658c"
description = "CircuitPython helper library for the QMI8658C 6-DoF Accelerometer and Gyroscope"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "JINS Inc.", email = "komoda@jins.com"}
]
urls = {Homepage = "https://github.com/jins-tkomoda/CircuitPython_QMI8658C"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "qmi8658c",
    "imu",
    "motion_sensor",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["qmi8658c"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
